# Axiom-Dev

./: .gitignore  README.md
axiom-backend/: config.py  main.py  pyproject.toml  test_critic.py  test_graph.py  test_planner.py  test_retriever.py
axiom-backend/agents/: critic.py  planner.py  retriever.py
axiom-backend/graph/: graph.py  state.py
axiom-backend/rag/: ingest.py  vectorstore.py
axiom-backend/rag/docs/: api_design.md  auth.md  databases.md  deployment.md  frontend-arch.md  performance.md  security.md
axiom-backend/rag/faiss_index/: index.faiss  index.pkl
axiom-frontend/: package.json  pnpm-lock.yaml
axiom-frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
axiom-frontend/components/: Header.tsx  Navbar.tsx  Searchbar.tsx  Sidebar.tsx
axiom-frontend/lib/: api.ts  generateAxiom.ts
axiom-frontend/sections/: Hero.tsx
