[project]
name = "axiom-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv[standard]>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "langchain-openai>=1.1.4",
    "langchain[standard]>=1.2.0",
    "langgraph[standard]>=1.0.5",
    "openai[standard]>=2.13.0",
    "python-dotenv[standard]>=1.2.1",
]
